Fixed navbar header alignment

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -103,6 +103,10 @@ $navbar-dark-toggler-border-color: $dark;
   height: 16px;
 }
 
+.gd-navbar-header {
+  font-size: x-large;
+}
+
 .gd-textarea {
   height: calc(100vh - 139px);
 }
